--- a/nibe.html
+++ b/nibe.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   </head>
   <body>
+<div class="container">
     <h1>Your nibe-fetcher code</h1>
     <pre>No code provided</pre>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
@@ -28,5 +29,6 @@
 	$('pre').text(getParameterByName('code'))      
     })  
     </script>
+</div>
   </body>
 </html>
